FInal(?) style fix on iOS butons

--- a/imports/ui/styles/_5_buttons.scss
+++ b/imports/ui/styles/_5_buttons.scss
@@ -8,7 +8,7 @@
 
 .main-button {
     @include btn;
-    border-radius: 3px;
+    border-radius: 3px !important; /* required to override on input[type="button" */
     color: white;
     padding: 0.4em 0.5em;
     min-width: 120px;
